--- a/README.Rmd
+++ b/README.Rmd
@@ -44,3 +44,9 @@ cars %>%
     notation = "number" # Or "alphabet"/"symbol"
   )
 ```
+
+## Examples
+These two documents demonstrate the different behaviors under HTML and LaTeX (including booktabs and longtable)
+
+* [HTML demo](http://rpubs.com/haozhu233/kableExtra_footnote_html)
+* [PDF demo](https://www.dropbox.com/s/qk7msi64mndn67y/brief_demo_pdf.pdf?dl=0)
