--- a/vignettes/htmlTable_styling.Rmd
+++ b/vignettes/htmlTable_styling.Rmd
@@ -9,53 +9,49 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-# Basic HTML 
+# Plain HTML 
 ```{r}
 library(knitr)
 library(kableExtra)
 dt <- mtcars[1:5, 1:2]
 
-kable(dt, format = "html")
+kable_input <- kable(dt, format = "html")
 ```
 
 # Basic Bootstrap Table
 ```{r}
-kable(dt, format = "html", table.attr = htmlTable_styling())
+kable(dt, format = "html") %>%
+  htmlTable_styling()
 ```
 
 # Boostrap Table Options
 ## Striped
 ```{r}
-kable(dt, format = "html", table.attr = htmlTable_styling(bootstrap_options = "striped"))
+kable(dt, format = "html") %>%
+  htmlTable_styling(bootstrap_options = "striped")
 ```
 
 ## Striped + Hover
 ```{r}
-kable(dt, format = "html", table.attr = htmlTable_styling(c("striped", "hover")))
+kable(dt, format = "html") %>%
+  htmlTable_styling(c("striped", "hover"))
 ```
 
 ## Other bootstrap options
 ```{r}
-kable(dt, format = "html", 
-      table.attr = htmlTable_styling(c("striped", "bordered", "hover", "condensed", "responsive")))
+kable(dt, format = "html") %>%
+  htmlTable_styling(c("striped", "bordered", "hover", "condensed", "responsive"))
 ```
 
 # "Thin" Table and Floating options
 ```{r}
-kable(dt, format = "html", 
-      table.attr = htmlTable_styling(
-        c("striped", "bordered", "condensed"), 
-        full_width = F
-      ))
+kable(dt, format = "html") %>%
+  htmlTable_styling(c("striped", "bordered", "condensed"), full_width = F)
 ```
 
 ```{r}
-kable(dt, format = "html", 
-      table.attr = htmlTable_styling(
-        c("striped", "bordered", "condensed"), 
-        full_width = F,
-        float = "left"
-      ))
+kable(dt, format = "html") %>%
+      htmlTable_styling(c("striped", "bordered", "condensed"), full_width = F, float = "left")
 ```
 
 
