finishing kable_styling

--- a/test/visual_tests/add_footnote_pdf.Rmd
+++ b/test/visual_tests/add_footnote_pdf.Rmd
@@ -1,10 +1,6 @@
 ---
-title: add_footnote - PDF
+title: "add_footnote - PDF"
 output: pdf_document
-vignette: >
-  %\VignetteIndexEntry{Use add_footnote in PDF document}
-  %\VignetteEngine{knitr::rmarkdown} 
-  %\VignetteEncoding{UTF-8}
 ---
 
 # Through Pandoc
