--- a/test/visual_tests/add_footnote_html.Rmd
+++ b/test/visual_tests/add_footnote_html.Rmd
@@ -29,14 +29,8 @@ kable(dt, format = "html") %>%
 
 ## HTML + bootstrap table
 ```{r through_html_bootstrap}
-kable(dt, format = "html", table.attr = htmlTable_styling()) %>%
+kable(dt, format = "html") %>%
+  kable_styling() %>%
   add_footnote(c("footnote 1", "footnote 2", "footnote 3"))
 ```
 
-## HTML + bootstrap narrow table
-```{r through_latex_longtable}
-kable(dt, format = "html", 
-      table.attr = htmlTable_styling(c("striped", "bordered"), 
-                                     full_width = F)) %>%
-  add_footnote(c("footnote 1", "footnote 2", "footnote 3"))
-```
