--- a/tests/visual_tests/add_header_above_pdf.Rmd
+++ b/tests/visual_tests/add_header_above_pdf.Rmd
@@ -10,9 +10,8 @@ options(knitr.table.format = "latex")
 # switch to "latex" in a pdf environment
 dt <- mtcars[1:5, 1:4]
 
-kable(dt, booktabs = T) %>%
-  kable_styling(bootstrap_options = "striped", 
-                latex_options = "striped",
+kable(dt, format = "latex", booktabs = T, caption = "Demo Table") %>%
+  kable_styling(latex_options = "striped", 
                 full_width = F) %>%
   add_header_above(c(" ", "Group 1" = 2, "Group 2[note]" = 2)) %>%
   add_footnote(c("table footnote"))
