--- a/tests/visual_tests/add_header_above_pdf.Rmd
+++ b/tests/visual_tests/add_header_above_pdf.Rmd
@@ -1,35 +1,41 @@
 ---
 title: "add_header_above"
-output: pdf_document
+output: 
+  pdf_document:
+    keep_tex: true
 ---
 
 ```{r}
 library(knitr)
 library(kableExtra)
-options(knitr.table.format = "latex")
+options(knitr.table.format = "latex", 
+        kable_styling_latex_options = c("striped", "hold_position"),
+        kable_styling_full_width = T)
 # switch to "latex" in a pdf environment
 dt <- mtcars[1:5, 1:4]
 
 kable(dt, format = "latex", booktabs = T, caption = "Demo Table") %>%
-  kable_styling(latex_options = "striped", 
-                full_width = F) %>%
+  kable_styling() %>%
   add_header_above(c(" ", "Group 1" = 2, "Group 2[note]" = 2)) %>%
   add_footnote(c("table footnote"))
 ```
 
 ```{r}
 kable(dt, format = "latex", booktabs = T) %>%
-  add_header_above(c(" ", "a" = 2, "b" = 2))
+  add_header_above(c(" ", "a" = 2, "b" = 2))%>%
+  kable_styling()
 ```
 
 
 ```{r}
 kable(dt, format = "latex", booktabs = T, longtable = T, caption = "aaa") %>%
-  add_header_above(c(" ", "a" = 2, "b" = 2))
+  add_header_above(c(" ", "a" = 2, "b" = 2))%>%
+  kable_styling()
 ```
 
 ```{r}
 kable(dt, format = "latex", booktabs = T, caption = "aaa") %>%
-  add_header_above(c(" ", "a" = 2, "b" = 2))
+  add_header_above(c(" ", "a" = 2, "b" = 2)) %>%
+  kable_styling()
 ```
 
