--- a/vignettes/awesome_table_in_html.Rmd
+++ b/vignettes/awesome_table_in_html.Rmd
@@ -25,6 +25,8 @@ Some LaTeX features in `kableExtra`, such as striped line, requires rmarkdown 1.
 # install.packages("devtools")
 devtools::install_github("rstudio/rmarkdown")
 
+install.packages("kableExtra")
+
 # For dev version
 devtools::install_github("haozhu233/kableExtra")
 ```
@@ -46,7 +48,8 @@ options(knitr.table.format = "html")
 ## Basic HTML Table
 Basic HTML output of `kable` looks very crude. To the end, it's just a plain HTML table without any love from css.
 ```{r}
-kable(dt)
+kable(dt, caption = "clust") %>%
+  kable_styling(full_width = F)
 ```
 
 ## Apply Bootstrap
