--- a/tests/visual_tests/add_indent_and_group_rows_html.Rmd
+++ b/tests/visual_tests/add_indent_and_group_rows_html.Rmd
@@ -13,6 +13,11 @@ dt <- mtcars[1:10, 1:8]
 ```
 
 ```{r}
+aaa <- getFromNamespace("is_html_output", "knitr")
+aaa()
+```
+
+```{r}
 kable(dt[1:5,], format = "html") %>%
   kable_styling(c("striped")) %>%
   add_indent(c(3, 5)) %>%
