--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,10 @@
+kableExtra 0.2.1
+--------------------------------------------------------------------------------
+
+* Added `column_spec()` to customize the look of the selected column.
+
+* Improve language in docs.
+
 kableExtra 0.2.0
 --------------------------------------------------------------------------------
 
