--- a/tests/visual_tests/column_width_html.Rmd
+++ b/tests/visual_tests/column_width_html.Rmd
@@ -19,11 +19,11 @@ library(kableExtra)
 library(xml2)
 
 dt <- data.frame(
-  row_id = 1:3,
+  row_id = c("abb", "xxx", "aaa"),
   contents = c(
-    "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vehicula tempor ex. Morbi malesuada sagittis turpis, at venenatis nisl luctus a. Sed suscipit, odio maximus fringilla rutrum, massa dolor elementum eros, at eleifend lectus augue vitae velit. Morbi congue congue lectus et auctor. Pellentesque tincidunt mi nec tristique malesuada. Cras pharetra lectus ut volutpat hendrerit. Ut dapibus orci ligula, id interdum metus mattis at. Sed egestas vitae nisi nec interdum. Nullam efficitur molestie aliquet. Nam cursus consectetur libero id pretium. Maecenas urna neque, dignissim ut leo vel, ultricies vestibulum nisi.",
-    "In eu urna at magna luctus rhoncus quis in nisl. Fusce in velit varius, posuere risus et, cursus augue. Duis eleifend aliquam ante, a aliquet ex tincidunt in. Etiam posuere enim a sodales congue. Curabitur ac vehicula tortor. Proin ac nulla in eros scelerisque volutpat in in mi. Nullam efficitur sem nec eros mattis, id venenatis dolor auctor. Nunc dignissim aliquet tincidunt. Nulla rhoncus massa leo, vitae mattis urna lobortis vitae. Curabitur fringilla sodales tincidunt. Cras arcu erat, hendrerit vitae arcu eget, laoreet hendrerit nibh. Maecenas vitae suscipit metus. Fusce ac enim posuere, scelerisque dui vitae, tristique libero. Nunc venenatis sodales nunc, in consectetur nisl hendrerit id. Fusce quis nibh vitae elit tristique blandit. Nunc accumsan pulvinar varius.", 
-    "Vivamus venenatis egestas eros ut tempus. Vivamus id est nisi. Aliquam molestie erat et sollicitudin venenatis. In ac lacus at velit scelerisque mattis. Suspendisse potenti. Etiam viverra, massa id lobortis facilisis, ex nibh dictum ligula, id interdum leo velit commodo velit. Nulla malesuada vel arcu at malesuada. Quisque feugiat nunc id nisl varius, nec dapibus tellus ultricies. Donec enim velit, semper in molestie vel, auctor porta lorem. Donec egestas venenatis augue sit amet tristique. Sed in justo ut est dictum consequat. Morbi dictum ornare magna vitae gravida. Nunc congue diam vitae lacinia vulputate. Curabitur hendrerit, erat quis tempus eleifend, dui turpis pellentesque libero, et pretium odio lorem eu magna."
+    "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vehicula tempor ex. Morbi malesuada sagittis turpis, at venenatis nisl luctus a. ",
+    "In eu urna at magna luctus rhoncus quis in nisl. Fusce in velit varius, posuere risus et, cursus augue. Duis eleifend aliquam ante, a aliquet ex tincidunt in.", 
+    "Vivamus venenatis egestas eros ut tempus. Vivamus id est nisi. "
   ),
   contents2 = c(
     "Lorem ipsum dolor",
@@ -31,9 +31,9 @@ dt <- data.frame(
     "Vivamus venenatis"
   ),
   contents3 = c(
-    "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vehicula tempor ex. Morbi malesuada sagittis turpis, at venenatis nisl luctus a. Sed suscipit, odio maximus fringilla rutrum, massa dolor elementum eros, at eleifend lectus augue vitae velit. Morbi congue congue lectus et auctor. Pellentesque tincidunt mi nec tristique malesuada. Cras pharetra lectus ut volutpat hendrerit. Ut dapibus orci ligula, id interdum metus mattis at. Sed egestas vitae nisi nec interdum. Nullam efficitur molestie aliquet. Nam cursus consectetur libero id pretium. Maecenas urna neque, dignissim ut leo vel, ultricies vestibulum nisi.",
-    "In eu urna at magna luctus rhoncus quis in nisl. Fusce in velit varius, posuere risus et, cursus augue. Duis eleifend aliquam ante, a aliquet ex tincidunt in. Etiam posuere enim a sodales congue. Curabitur ac vehicula tortor. Proin ac nulla in eros scelerisque volutpat in in mi. Nullam efficitur sem nec eros mattis, id venenatis dolor auctor. Nunc dignissim aliquet tincidunt. Nulla rhoncus massa leo, vitae mattis urna lobortis vitae. Curabitur fringilla sodales tincidunt. Cras arcu erat, hendrerit vitae arcu eget, laoreet hendrerit nibh. Maecenas vitae suscipit metus. Fusce ac enim posuere, scelerisque dui vitae, tristique libero. Nunc venenatis sodales nunc, in consectetur nisl hendrerit id. Fusce quis nibh vitae elit tristique blandit. Nunc accumsan pulvinar varius.", 
-    "Vivamus venenatis egestas eros ut tempus. Vivamus id est nisi. Aliquam molestie erat et sollicitudin venenatis. In ac lacus at velit scelerisque mattis. Suspendisse potenti. Etiam viverra, massa id lobortis facilisis, ex nibh dictum ligula, id interdum leo velit commodo velit. Nulla malesuada vel arcu at malesuada. Quisque feugiat nunc id nisl varius, nec dapibus tellus ultricies. Donec enim velit, semper in molestie vel, auctor porta lorem. Donec egestas venenatis augue sit amet tristique. Sed in justo ut est dictum consequat. Morbi dictum ornare magna vitae gravida. Nunc congue diam vitae lacinia vulputate. Curabitur hendrerit, erat quis tempus eleifend, dui turpis pellentesque libero, et pretium odio lorem eu magna."
+    "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vehicula tempor ex. Morbi malesuada sagittis turpis, at venenatis nisl luctus a. ",
+    "In eu urna at magna luctus rhoncus quis in nisl. Fusce in velit varius, posuere risus et, cursus augue. Duis eleifend aliquam ante, a aliquet ex tincidunt in. ", 
+    "Vivamus venenatis egestas eros ut tempus. Vivamus id est nisi. Aliquam molestie erat et sollicitudin venenatis. In ac lacus at velit scelerisque mattis. "
   )
 )
 
